--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,10 @@
             <artifactId>spring-aop</artifactId>
             <version>5.2.8.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.2.8.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
