--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 #key = value
 mysql.driver=com.mysql.cj.jdbc.Driver
-mysql.url=jdbc:mysql://rm-cn-nwy3iu4n40017eoo.rwlb.rds.aliyuncs.com:3306/flight?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true
+mysql.url=jdbc:mysql://home.firegoldfish.com:3306/flight
 mysql.username=root
 mysql.password=Aa114514
